--- a/Cus_Rules_U_T.ini
+++ b/Cus_Rules_U_T.ini
@@ -25,7 +25,7 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🗽,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🗽`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🗽`url-test`(美国|US|🇺🇸)(?!.*家宽)(?!.*去广告)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🕊️`url-test`(?=.*美国)(?=.*家宽).+`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
