--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -17,7 +17,7 @@ ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Prox
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯,[]GEOIP,CN
+ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 custom_proxy_group=🚀`select`[]🇺🇸`[]🇨🇦`[]🇹🇼`[]🇯🇵`[]🇸🇬`[]🇭🇰`[]🔧
