--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -23,8 +23,8 @@ ruleset=🚀,[]FINAL
 custom_proxy_group=🚀`select`[]🇺🇸`[]🇹🇼`[]🇯🇵`[]🇸🇬`[]🔧
 custom_proxy_group=🇺🇸`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,3,100
 custom_proxy_group=🇹🇼`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,3,100
-custom_proxy_group=🇨🇦`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,3,100
-custom_proxy_group=🇨🇦`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇯🇵`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,3,100
+custom_proxy_group=🇸🇬`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`600,3,100
 custom_proxy_group=🔧`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
